# E-Commerce_System

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/scripts/: deploy_pa.py
.github/workflows/: deploy.yml  tests.yml
ECOMMERCE/: asgi.py  settings.py  urls.py  wsgi.py
ECOMMERCE/settings/: common.py  dev.py  production.py
account/: admin.py  permissions.py  serializers.py  urls.py  views.py
account/auth/: permissions.py  serializers.py  tokens.py  urls.py  utils.py  views.py
account/migrations/: 0001_initial.py  0002_customerprofile_avatar_sellerprofile_avatar_and_more.py  0003_sellerprofile_account_sel_is_veri_894913_idx.py  0004_alter_customerprofile_avatar.py  0005_remove_sellerprofile_account_sel_is_veri_894913_idx_and_more.py
account/models/: __init__.py  customer.py  seller.py  staff.py
account/tests/: conftest.py  test_customer_profile.py  test_seller_profile.py  test_users.py
address/: admin.py  serializers.py
address/migrations/: 0001_initial.py  0002_alter_address_content_type.py  0003_alter_address_options_alter_address_content_type.py  0004_alter_address_country.py
address/models/: address.py
address/tests/: test_models.py
analytics/: serializers.py  urls.py  views.py
analytics/tests/: test_analytics.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py  (+3 more)
discount/: admin.py  apps.py  permissions.py  serializers.py  urls.py  views.py
order/: admin.py  permissions.py  serializers.py  urls.py  views.py
product/: admin.py  permissions.py  serializers.py  urls.py  views.py
store/: permissions.py  serializers.py  urls.py  views.py
(+33 files in other folders)
